--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,61 @@
   font-family: sans-serif;
   text-align: center;
 }
+#nav {
+  position: absolute;
+  background: #798b91;
+  height: 10%;
+  width: 100%;
+}
+
+#menuText {
+  position: absolute;
+  display: block;
+  left: 5%;
+  top: 50%;
+  transform: translate(0, -50%);
+  font-size: 5vmin;
+  font-weight: bold;
+  font-family: monospace;
+  color: white;
+}
+
+#menuBtn {
+  position: absolute;
+  left: 100%;
+  top: 50%;
+  transform: translate(-100%, -50%);
+  height: 100%;
+}
+
+#menu {
+  background-color: white;
+  position: absolute;
+  left: 100%;
+  top: 10%;
+  transform: translate(-100%, 0);
+  width: 80%;
+  z-index: 99;
+  display: none;
+}
+
+.link {
+  background-color: #cfd8dc;
+  margin: 0.1vh;
+  display: block;
+  height: 8vh;
+  line-height: 8vh;
+  font-size: 5vmin;
+  font-weight: bold;
+  font-family: monospace;
+  color: rgba(72, 56, 74, 0.78);
+  text-decoration: none;
+}
+
+#main {
+  position: absolute;
+  top: 10%;
+  width: 100%;
+  height: 90%;
+  /* background-color: blue; */
+}
