--- a/src/logon.css
+++ b/src/logon.css
@@ -1,5 +1,5 @@
 #logon-bgimage {
-  background: #949494;
+  background: #3b3c3d;
   height: 100em;
   background-position: center;
   background-repeat: no repeat;
