--- a/src/pages/page3.css
+++ b/src/pages/page3.css
@@ -1,6 +1,6 @@
 #invoiceList{
   margin: auto;
-  background-color: yellow;
+  /* background-color: yellow; */
   text-align: center;
 }
 #invoiceListhead{
