Signup/Logon Page style H1 Colour change

--- a/src/logon.css
+++ b/src/logon.css
@@ -11,9 +11,9 @@
   width: 300px;
 }
 .h1 {
-  color: white;
+  color: #f6a7b8;
   font-family: "Sans Serif";
-  font-size: 75px;
+  font-size: 90px;
 }
 
 .p {
