--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@
   background: #6c7176;
   height: 10%;
   width: 100%;
+  top: 0px;
 }
 
 #menuText {
@@ -21,13 +22,13 @@
   color: white;
 }
 
-#menuBtn {
+/* #menuBtn {
   position: absolute;
   left: 100%;
   top: 50%;
   transform: translate(-100%, -50%);
   height: 100%;
-}
+} */
 
 #menu {
   background-color: white;
@@ -59,4 +60,19 @@
   width: 100%;
   height: 90%;
   /* background-color: blue; */
+}
+
+.hamburger {
+  position: relative;
+  left: 95%;
+  width: 75px;
+  height: 12px;
+  background-color: #f6a7b8;
+  margin: 10px 0;
+  border-radius: 20%;
+}
+
+#container {
+  min-height: 100%;
+  cursor: pointer;
 }
