--- a/src/pages/page4.css
+++ b/src/pages/page4.css
@@ -1,9 +1,5 @@
-#logout-bgimage {
-  background: url("https://images.unsplash.com/photo-1525367063161-61df4bf6100a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
-  height: 100vh;
-  background-position: center;
-  background-repeat: no repeat;
-  background-size: cover;
+body {
+  background-color: #6c7176;
 }
 
 .h2 {
